--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^12.7.4",
     "lucide-react": "^0.487.0",
     "next": "15.3.0",
     "react": "^19.0.0",
