--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.7.4",
     "lucide-react": "^0.487.0",
-    "next": "15.3.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "next": "^15.3.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
