feat: update dependencies and enhance layout components
- Added new dependencies for Babel and LocatorJS runtime.
- Improved layout responsiveness across various sections.
- Integrated ClutchWidget into BusinessCarouselSection and HomeHeroSection.
- Updated footer contact information.
- Refactored sections for better structure and readability.

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@babel/runtime": "^7.27.1",
     "embla-carousel": "^8.6.0",
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
@@ -20,7 +21,11 @@
     "swiper": "^11.2.6"
   },
   "devDependencies": {
+    "@babel/core": "^7.27.1",
+    "@babel/plugin-transform-react-jsx-source": "^7.27.1",
     "@eslint/eslintrc": "^3",
+    "@locator/babel-jsx": "^0.4.4",
+    "@locator/runtime": "^0.4.4",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
