feat: add AOS library for animations and update dependencies
- Integrated AOS (Animate On Scroll) library for enhanced animations across various sections.
- Added aos dependency to package.json and updated package-lock.json and yarn.lock.
- Refactored multiple components to include AOS initialization and data attributes for animations.
- Updated image components to use Next.js Image for better performance and optimization.
- Improved layout and styling consistency in several sections, including MissionSection and IndustriesSection.

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.27.1",
+    "aos": "^2.3.4",
     "embla-carousel": "^8.6.0",
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
