feat: add @types/aos and update image components to Next.js Image
- Added @types/aos dependency for TypeScript support.
- Updated multiple components to use Next.js Image for improved performance and optimization.
- Adjusted image attributes for better responsiveness and layout consistency across various sections.

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@locator/babel-jsx": "^0.4.4",
     "@locator/runtime": "^0.4.4",
     "@tailwindcss/postcss": "^4",
+    "@types/aos": "^3.0.7",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
