--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.828.0",
     "@babel/runtime": "^7.27.1",
     "@radix-ui/react-slot": "^1.2.2",
     "aos": "^2.3.4",
