--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@aws-sdk/client-s3": "^3.828.0",
     "@babel/runtime": "^7.27.1",
     "@radix-ui/react-slot": "^1.2.2",
+    "@supabase/ssr": "^0.7.0",
+    "@supabase/supabase-js": "^2.56.0",
+    "@uiw/react-md-editor": "^4.0.8",
     "aos": "^2.3.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -23,6 +26,7 @@
     "next": "^15.3.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-markdown": "^10.1.0",
     "swiper": "^11.2.6",
     "tailwind-merge": "^3.3.0"
   },
